warp_core/tests/snapshots/golden_screen_tests__golden_with_heuristic_fallback.snap
---
source: tests/golden_screen_tests.rs
expression: json_lines
---
[
  {
    "block_type": "unknown",
    "content": "user@host:~$ echo test\ntest",
    "exit_code": null,
    "id": "[redacted]",
    "line_count": 2,
    "type": "block"
  }
]
